# credit-proposal

./: .gitignore  README.en.md  README.md  README.vi.md  pyproject.toml  requirements.txt
docs/design/: design-document.md
ete-evidence/vpbank/mst/: README.md
src/: config.py  main.py
src/agents/: assembler.py  graph.py  subgraph1.py  subgraph2.py  subgraph3.py
src/banks/: __init__.py
src/banks/vpbank/: renderer.py
src/models/: state.py
src/tools/: pdf_extractor.py
src/utils/: docx_template.py
tests/: test_bank_registry.py  test_graph_structure.py  test_state_model.py
tests/e2e/: test_multi_bank_e2e.py
