[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "credit-proposal-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end multi-bank tests, opt-in via RUN_E2E=1"]
